[gd_scene load_steps=11 format=3 uid="uid://dtwtd0qa51cnn"]

[ext_resource type="Script" path="res://code/enemies/dasher.gd" id="1_70qv2"]
[ext_resource type="Texture2D" uid="uid://b4fx74hm7217c" path="res://images/dasher.png" id="1_njqgp"]
[ext_resource type="Texture2D" uid="uid://bmcd8u8jcccnl" path="res://images/dasher_attacking.png" id="2_q4wjm"]
[ext_resource type="Texture2D" uid="uid://qpef6kx1nt86" path="res://images/dasher_charging.png" id="2_q7brg"]
[ext_resource type="Texture2D" uid="uid://7fclxb081fk5" path="res://images/dasher_hit.png" id="3_uatb2"]
[ext_resource type="AudioStream" uid="uid://dlq6ofgaglnk3" path="res://sounds/gruntDeath.wav" id="6_2j4h4"]
[ext_resource type="AudioStream" uid="uid://okek8rjn4qas" path="res://sounds/dasher_chargeup.wav" id="7_auct7"]
[ext_resource type="AudioStream" uid="uid://biymlwji45fr1" path="res://sounds/grunthit.wav" id="7_ibl4b"]
[ext_resource type="AudioStream" uid="uid://eynmq0612m8c" path="res://sounds/dasher_dash.wav" id="8_3h038"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wcby4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_q7brg")
}],
"loop": true,
"name": &"charging",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_q4wjm")
}],
"loop": true,
"name": &"dashing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_njqgp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_uatb2")
}],
"loop": true,
"name": &"on_hit",
"speed": 5.0
}]

[node name="Dasher" type="Area2D"]
collision_mask = 5
script = ExtResource("1_70qv2")

[node name="DasherHitbox" type="CollisionPolygon2D" parent="."]
position = Vector2(3, 0)
polygon = PackedVector2Array(-31, -20, -64, 0, -31, 19, 15, 31, 37, 0, 15, -31)

[node name="DasherModel" type="AnimatedSprite2D" parent="."]
position = Vector2(-14, -3)
scale = Vector2(0.625922, 0.625922)
sprite_frames = SubResource("SpriteFrames_wcby4")
animation = &"charging"

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ibl4b")
volume_db = -15.671
pitch_scale = 1.41

[node name="ChargeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_auct7")
volume_db = -12.195

[node name="DashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_3h038")
volume_db = -12.195

[node name="GruntDeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_2j4h4")
volume_db = -12.822

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
